--- a/localization/english/daoyu_l_english.yml
+++ b/localization/english/daoyu_l_english.yml
@@ -299,11 +299,10 @@
  daoyu_all_country_spring:0 "All Country Spring"
  daoyu_all_country_spring_flavor:0 "In Middle and Late, #N Be Given Cautiously!#!\nLow-configuration of the computer, #N Be Given Cautiously!#!\nUsed $daoyu_one_country_one_nation_one_religion$, #N Rate will be reduced#!\nUsed $daoyu_one_earth_one_nation_one_religion$, #N Rate will be greatly reduced#!\n$daoyu_create_radicals_flavor$\nHow long will the selection effect last?"
  daoyu_continue:0 "Do you want to continue?"
-daoyu_achievements_flavor:0 "Can be achieved:"
+ daoyu_achievements_flavor:0 "Can be achieved:\n$ACHIEVEMENT_victorian_century$ $ACHIEVEMENT_american_territory$ $ACHIEVEMENT_bourbon_for_everyone$ $ACHIEVEMENT_an_empire_under_the_pun$ $ACHIEVEMENT_the_western_protectorate$ $ACHIEVEMENT_risorgimento$ $ACHIEVEMENT_broken_promises$ $ACHIEVEMENT_revolutionary$"
  daoyu_colonial_integrity:0 "Colonial Integrity"
  daoyu_victorian_century:0 "Victorian Century - Achievements"
  daoyu_victorian_century_desc:0 "After clicking, you don't need to worry about anything, and wait until 1936."
-daoyu_generic_desc_inventive:0 "Inventive"
  daoyu_all_country_division:0 "AI Country Division"
  daoyu_all_country_division_desc:0 "Use caution if installing MOD that changes map, information."
  daoyu_auto_flavor:0 "#N $buildings_expand$#!: Olny auto expand buildings with unemployment rate > 10% in their states, This building trigger: $concept_occupancy$ >=75%, has $concept_cash_reserves$( max 1000 level, and $building_government_administration$ max 100 level ).\n#N $concept_production_method$#!: If any building adopts a more advanced production method, all buildings of the same type will also adopt it.\n#N $russification_modifier$#!: Assimilate into [ROOT.GetCountry.GetRuler.GetFirstName]'s culture [ROOT.GetCountry.GetRuler.GetCulture.GetName]."
@@ -399,13 +398,6 @@ daoyu_generic_desc_inventive:0 "Inventive"
  daoyu_join_power_bloc_desc:0 "$daoyu_join_power_bloc$"
  daoyu_no_power_bloc:0 "#R No $concept_power_bloc$#!"
  daoyu_target_country_power_bloc: "$concept_power_bloc$: [SCOPE.sCountry('daoyu_target_country').GetPowerBloc.GetName]\n"
- 1818.5.5:0 "1818.5.5"
- ep1_content:0 "ep1_content"
- 1820.11.28:0 "1820.11.28"
- 1870.4.22:0 "1870.4.22"
- 1879.10.26:0 "1879.10.26"
- 1869.10.2:0 "1869.10.2"
-daoyu:0 "Daoyu"
  daoyu_root_power_bloc: "$concept_power_bloc$: [ROOT.GetCountry.GetPowerBloc.GetName]\n"
  daoyu_root_join_target_country_power_bloc: "$daoyu_root_get_name$ joins the [SCOPE.sCountry('daoyu_target_country').GetPowerBloc.GetName]"
  daoyu_target_country_join_root_power_bloc: "$daoyu_target_country_get_name$ joins the [ROOT.GetCountry.GetPowerBloc.GetName]"
@@ -556,96 +548,6 @@ daoyu:0 "Daoyu"
  daoyu_state_middle_strata_expected_sol_b:0 "$state_middle_strata_expected_sol_add$ = 0"
  daoyu_state_upper_strata_expected_sol_b:0 "$state_upper_strata_expected_sol_add$ = 0"
  daoyu_state_expected_sol_from_literacy_b:0 "$state_expected_sol_from_literacy$ = 0"
- 232:0 "Option 232"
- 233:0 "Option 233"
- 234:0 "Option 234"
- 235:0 "Option 235"
- 236:0 "Option 236"
- 237:0 "Option 237"
- 238:0 "Option 238"
- 239:0 "Option 239"
- 240:0 "Option 240"
- 241:0 "Option 241"
- 242:0 "Option 242"
- 243:0 "Option 243"
- 244:0 "Option 244"
- 245:0 "Option 245"
- 246:0 "Option 246"
- 247:0 "Option 247"
- 248:0 "Option 248"
- 249:0 "Option 249"
- 250:0 "Option 250"
- 251:0 "Option 251"
- 252:0 "Option 252"
- 253:0 "Option 253"
- 254:0 "Option 254"
- 255:0 "Option 255"
- 256:0 "Option 256"
- 257:0 "Option 257"
- 258:0 "Option 258"
- 259:0 "Option 259"
- 260:0 "Option 260"
- 261:0 "Option 261"
- 262:0 "Option 262"
- 263:0 "Option 263"
- 264:0 "Option 264"
- 265:0 "Option 265"
- 266:0 "Option 266"
- 267:0 "Option 267"
- 268:0 "Option 268"
- 269:0 "Option 269"
- 270:0 "Option 270"
- 271:0 "Option 271"
- 272:0 "Option 272"
- 273:0 "Option 273"
- 274:0 "Option 274"
- 275:0 "Option 275"
- 276:0 "Option 276"
- 277:0 "Option 277"
- 278:0 "Option 278"
- 279:0 "Option 279"
- 280:0 "Option 280"
- 281:0 "Option 281"
- 282:0 "Option 282"
- 283:0 "Option 283"
- 284:0 "Option 284"
- 285:0 "Option 285"
- 286:0 "Option 286"
- 287:0 "Option 287"
- 288:0 "Option 288"
- 289:0 "Option 289"
- 290:0 "Option 290"
- 291:0 "Option 291"
- 292:0 "Option 292"
- 293:0 "Option 293"
- 294:0 "Option 294"
- 295:0 "Option 295"
- 296:0 "Option 296"
- 297:0 "Option 297"
- 298:0 "Option 298"
- 299:0 "Option 299"
- 300:0 "Option 300"
- 1K:0 "1,000"
- 2K:0 "2,000"
- 5K:0 "5,000"
- 10K:0 "10,000"
- 20K:0 "20,000"
- 50K:0 "50,000"
- 100K:0 "100,000"
- 500K:0 "500,000"
- 1M:0 "1,000,000"
- 20%:0 "20%"
- 40%:0 "40%"
- 60%:0 "60%"
- 80%:0 "80%"
- 100%:0 "100%"
- Pre-1836:0 "Pre-1836"
- 1836-1861:0 "1836-1861"
- 1862-1886:0 "1862-1886"
- 1887-1911:0 "1887-1911"
- 1911-1936:0 "1911-1936"
- company_basic_agriculture_1:0 "Basic Agriculture"
- daoyu_has_any_company:0 "Has Company"
  daoyu_state_lower_strata_expected_sol_c:0 "$state_lower_strata_expected_sol_add$ - 1"
  daoyu_state_middle_strata_expected_sol_c:0 "$state_middle_strata_expected_sol_add$ - 1"
  daoyu_state_upper_strata_expected_sol_c:0 "$state_upper_strata_expected_sol_add$ - 1"
