--- a/localization/simp_chinese/daoyu_l_simp_chinese.yml
+++ b/localization/simp_chinese/daoyu_l_simp_chinese.yml
@@ -198,13 +198,6 @@
  daoyu_etc:0 "等"
  daoyu_target_political_lobby:0 "[SCOPE.sPoliticalLobby('daoyu_target_political_lobby').GetName]"
  daoyu_united_all_state_culture_effect:0 "一键洗地"
- 1818.5.5:0 "1818.5.5"
- ep1_content:0 "ep1_content"
- 1820.11.28:0 "1820.11.28"
- 1870.4.22:0 "1870.4.22"
- 1879.10.26:0 "1879.10.26"
- 1869.10.2:0 "1869.10.2"
-daoyu:0 "刀鱼"
  daoyu_target_country:0 "目标国家"
  daoyu_target_country_get_name:0 "[SCOPE.sCountry('daoyu_target_country').GetName]"
  daoyu_root_get_name:0 "[ROOT.GetCountry.GetName]"
@@ -306,11 +299,10 @@ daoyu:0 "刀鱼"
  daoyu_all_country_spring:0 "万国之春"
  daoyu_all_country_spring_flavor:0 "游戏中后期#N 慎用#!\n低配置电脑#N 慎用#!\n使用过$daoyu_one_country_one_nation_one_religion$#N 效果降低#!\n使用过$daoyu_one_earth_one_nation_one_religion$#N 效果大大降低#!\n$daoyu_create_radicals_flavor$\n选择效果持续几年？"
  daoyu_continue:0 "是否继续？"
-daoyu_achievements_flavor:0 "目前可以达成："
+ daoyu_achievements_flavor:0 "目前可以达成：\n$ACHIEVEMENT_victorian_century$ $ACHIEVEMENT_american_territory$ $ACHIEVEMENT_bourbon_for_everyone$ $ACHIEVEMENT_an_empire_under_the_pun$ $ACHIEVEMENT_the_western_protectorate$ $ACHIEVEMENT_risorgimento$ $ACHIEVEMENT_broken_promises$ $ACHIEVEMENT_revolutionary$"
  daoyu_colonial_integrity:0 "殖民地完整"
  daoyu_victorian_century:0 "维多利亚世纪成就"
  daoyu_victorian_century_desc:0 "点击后，什么都不用管，等时间走到1936年。"
-daoyu_generic_desc_inventive:0 "富有创造力"
  daoyu_all_country_division:0 "AI国家分裂"
  daoyu_all_country_division_desc:0 "打了改动地图信息的MOD慎用。"
  daoyu_auto_flavor:0 "#N $buildings_expand$#!：只自动扩建所在州未就业率>10%且劳动力满编率>=75%有资金储备的建筑(最大1000级)和行政机构(最大100级)。\n#N $concept_production_method$#!：任一建筑采用更先进生产方式，所有同类型建筑也会采用。\n#N $russification_modifier$#!：同化为[ROOT.GetCountry.GetRuler.GetFirstName]的文化[ROOT.GetCountry.GetRuler.GetCulture.GetName]。
@@ -556,96 +548,6 @@ daoyu_generic_desc_inventive:0 "富有创造力"
  daoyu_state_middle_strata_expected_sol_b:0 "$state_middle_strata_expected_sol_add$ = 0"
  daoyu_state_upper_strata_expected_sol_b:0 "$state_upper_strata_expected_sol_add$ = 0"
  daoyu_state_expected_sol_from_literacy_b:0 "$state_expected_sol_from_literacy$ = 0"
- 232:0 "选项 232"
- 233:0 "选项 233"
- 234:0 "选项 234"
- 235:0 "选项 235"
- 236:0 "选项 236"
- 237:0 "选项 237"
- 238:0 "选项 238"
- 239:0 "选项 239"
- 240:0 "选项 240"
- 241:0 "选项 241"
- 242:0 "选项 242"
- 243:0 "选项 243"
- 244:0 "选项 244"
- 245:0 "选项 245"
- 246:0 "选项 246"
- 247:0 "选项 247"
- 248:0 "选项 248"
- 249:0 "选项 249"
- 250:0 "选项 250"
- 251:0 "选项 251"
- 252:0 "选项 252"
- 253:0 "选项 253"
- 254:0 "选项 254"
- 255:0 "选项 255"
- 256:0 "选项 256"
- 257:0 "选项 257"
- 258:0 "选项 258"
- 259:0 "选项 259"
- 260:0 "选项 260"
- 261:0 "选项 261"
- 262:0 "选项 262"
- 263:0 "选项 263"
- 264:0 "选项 264"
- 265:0 "选项 265"
- 266:0 "选项 266"
- 267:0 "选项 267"
- 268:0 "选项 268"
- 269:0 "选项 269"
- 270:0 "选项 270"
- 271:0 "选项 271"
- 272:0 "选项 272"
- 273:0 "选项 273"
- 274:0 "选项 274"
- 275:0 "选项 275"
- 276:0 "选项 276"
- 277:0 "选项 277"
- 278:0 "选项 278"
- 279:0 "选项 279"
- 280:0 "选项 280"
- 281:0 "选项 281"
- 282:0 "选项 282"
- 283:0 "选项 283"
- 284:0 "选项 284"
- 285:0 "选项 285"
- 286:0 "选项 286"
- 287:0 "选项 287"
- 288:0 "选项 288"
- 289:0 "选项 289"
- 290:0 "选项 290"
- 291:0 "选项 291"
- 292:0 "选项 292"
- 293:0 "选项 293"
- 294:0 "选项 294"
- 295:0 "选项 295"
- 296:0 "选项 296"
- 297:0 "选项 297"
- 298:0 "选项 298"
- 299:0 "选项 299"
- 300:0 "选项 300"
- 1K:0 "1,000"
- 2K:0 "2,000"
- 5K:0 "5,000"
- 10K:0 "10,000"
- 20K:0 "20,000"
- 50K:0 "50,000"
- 100K:0 "100,000"
- 500K:0 "500,000"
- 1M:0 "1,000,000"
- 20%:0 "20%"
- 40%:0 "40%"
- 60%:0 "60%"
- 80%:0 "80%"
- 100%:0 "100%"
- Pre-1836:0 "1836年前"
- 1836-1861:0 "1836-1861年"
- 1862-1886:0 "1862-1886年"
- 1887-1911:0 "1887-1911年"
- 1911-1936:0 "1911-1936年"
- company_basic_agriculture_1:0 "基础农业"
- daoyu_has_any_company:0 "有公司"
  daoyu_state_lower_strata_expected_sol_c:0 "$state_lower_strata_expected_sol_add$ - 1"
  daoyu_state_middle_strata_expected_sol_c:0 "$state_middle_strata_expected_sol_add$ - 1"
  daoyu_state_upper_strata_expected_sol_c:0 "$state_upper_strata_expected_sol_add$ - 1"
